--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "dayjs": "^1.11.7"
   }
 }
