--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.7",
+    "lodash.debounce": "^4.0.8"
   }
 }
