--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "lodash.debounce": "^4.0.8",
+    "toastify-js": "^1.12.0",
     "yup": "^0.32.11"
   }
 }
